# vehicle-dashboard

./: README.md  dashboard.py  pyproject.toml
